# DisputeDesk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
dispute_desk/: __init__.py  baseline.py  client.py  config.py  grading.py  models.py  scenarios.py
dispute_desk/server/: __init__.py  app.py  dispute_desk_environment.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
tests/: test_baseline.py  test_client.py  test_config.py  test_entrypoints.py  test_environment.py  test_grading.py
